--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.241.1/containers/ubuntu
+// https://containers.dev/implementors/json_reference/
 {
 	"name": "Existing Dockerfile",
 	"build": {
@@ -16,7 +17,10 @@
 				"ms-python.python"
 			]
 		}
-	}
+	},
+	"mounts": [
+		"source=sg-scraper-downloads,target=${containerWorkspaceFolder}/downloads,type=volume"
+	]
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 
